[gd_scene load_steps=6 format=3 uid="uid://ctfl6eeriuu2g"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_bcjig"]
[ext_resource type="Texture2D" uid="uid://d3noke54yjtcl" path="res://assets/sprites/ball.png" id="1_gsc7x"]
[ext_resource type="PackedScene" uid="uid://xungmr44dtk0" path="res://scenes/hitbox.tscn" id="3_dlf7k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lm1yc"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ffr48"]
radius = 3.0

[node name="projectile" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_bcjig")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.98023e-08, 1.78814e-07)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_gsc7x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lm1yc")

[node name="hitbox" parent="." instance=ExtResource("3_dlf7k")]
collision_layer = 8
collision_mask = 4
monitoring = true

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource("CircleShape2D_ffr48")

[node name="lifespan_timer" type="Timer" parent="."]

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="lifespan_timer" to="." method="_on_lifespan_timer_timeout"]

[editable path="hitbox"]
